# module10

./: pyproject.toml
notes/: .env
notes/noteapp/: admin.py  forms.py  models.py  urls.py  views.py
notes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_alter_tag_name_and_more.py  0003_remove_note_created_remove_note_done_and_more.py  0004_rename_description_note_quote.py  0005_note_author_remove_note_tags_note_tags.py  0006_alter_note_quote_alter_note_tags.py
notes/noteapp/templateauthors/: extract_authors.py
notes/noteapp/templates/noteapp/: author.html  author_detail.html  detail.html  index.html  note.html  quotes.html
notes/notes/: settings.py  urls.py
notes/users/: views.py
notes/users/migrations/: 0001_initial.py
