[tool.poetry]
name = "notes"
version = "0.1.0"
description = "Jango test project"
authors = ["Denys <denkuryshko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
psycopg2 = "^2.9.9"
image = "^1.5.33"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
